Add deleteUser
